# mqtt-manager

./: .gitignore  CMakeLists.txt
include/: IMQTTManagerInteraction.hpp  MQTTManager.hpp
scripts/: deploy_artifact_on_target.sh  start_gdbserver_on_target.sh
src/: MQTTManager.cpp  main.cpp
src/ConfigFile/: ConfigFile.cpp  ConfigFile.hpp
src/Configuration/: ConfigCore.hpp  IConfigCore.hpp  IMQTTManagerCfg.hpp  MQTTManagerCfg.hpp
src/Configuration/Channel/: ConfigFile.cpp  ConfigFile.hpp  IConfigChannel.hpp
src/Configuration/Core/: ConfigCore.cpp  ConfigCore.hpp  IConfigCore.hpp
src/Configuration/Data/: ConfigData.hpp
src/Configuration/Parser/: ConfigJsonParser.cpp  ConfigJsonParser.hpp  IConfigParser.hpp
src/ConfigurationChannels/: ConfigFile.cpp  ConfigFile.hpp  IConfigChannel.hpp
src/Publisher/: AwsPublisher.cpp  AwsPublisher.hpp  IPublisher.hpp
src/Receiver/: IReceiver.hpp
template/: mqtt-manager-configurator.json
tool/: CMakeLists.txt  main.cpp
